--- a/roles/ansible-role-kafka/tasks/main.yml
+++ b/roles/ansible-role-kafka/tasks/main.yml
@@ -15,6 +15,45 @@
 - name: Download the latest Kafka
   ansible.builtin.get_url:
     url: https://downloads.apache.org/kafka/3.0.0/kafka_2.13-3.0.0.tgz
-    dest: /tmp/
+    dest: /tmp
     checksum: sha512:{{ kafka_checksum }}
 
+- name: Unarchive Kafka download
+  ansible.builtin.unarchive:
+    src: /tmp/kafka_2.13-3.0.0.tgz
+    dest: /opt
+    owner: kafka
+    remote_src: yes
+
+- name: Create symbolic link 
+  file:
+    src: /opt/kafka_2.13-3.0.0
+    dest: /opt/kafka
+    state: link
+
+- name: Copy the Zookeeper Service file
+  ansible.builtin.template:
+    src: zookeeper.service.j2
+    dest: /etc/systemd/system/zookeeper.service
+    owner: kafka
+
+- name: Copy the Kafka Service file
+  ansible.builtin.template:
+    src: kafka.service.j2
+    dest: /etc/systemd/system/kafka.service
+    owner: kafka
+
+- name: Enable the Kafka Service 
+  ansible.builtin.systemd:
+    name: kafka
+    enabled: yes
+    masked: no
+
+- name: Force systemd to reread configs (2.4 and above)
+  ansible.builtin.systemd:
+    daemon_reload: yes
+
+- name: Make sure Kafka is running
+  ansible.builtin.systemd:
+    state: started
+    name: kafka
